--- a/test.html
+++ b/test.html
@@ -1,125 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CyberThulir - Gamified Cybersecurity Learning</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto&display=swap" rel="stylesheet">
-  <style>
-    :root {
-      --bg-color: #0A192F;
-      --text-color: #ffffff;
-      --accent-color: #3F8EFC;
-      --button-hover: #5FAEFF;
-    }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Cyber Arena</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  <script type="module" src="script.js"></script>
 
-    body {
-      font-family: 'Roboto', sans-serif;
-     /*  background-color: var(--bg-color); */
-     background-image: url(image/Cyber\ security\ technology\ concept\ Shield\ With\ Keyhole\ icon\ personal\ data\ _\ Premium\ Vector.jpeg);
-     background-size: cover;
-     background-repeat: no-repeat;
-      color: var(--text-color);
-      line-height: 1.6;
-    }
-
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 20px 50px;
-      background-color: transparent;
-    }
-
-    .logo img {
-      height: 60px;
-      background-color: #ffffff;
-    }
-
-    nav a {
-      color: var(--text-color);
-      text-decoration: none;
-      margin-left: 30px;
-      font-weight: 500;
-      transition: 0.3s;
-    }
-
-    nav a:hover {
-      color: var(--accent-color);
-    }
-
-    .hero {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      text-align: center;
-      padding: 100px 20px;
-    }
-
-    .hero h1 {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 48px;
-      margin-bottom: 20px;
-      color: var(--accent-color);
-    }
-
-    .hero p {
-      max-width: 600px;
-      font-size: 18px;
-      margin-bottom: 30px;
-    }
-
-    .hero button {
-      background-color: var(--accent-color);
-      color: #0A192F;
-      border: none;
-      padding: 15px 30px;
-      font-size: 16px;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-
-    .hero button:hover {
-      background-color: var(--button-hover);
-    }
-
-    footer {
-      background-color: #0A1622;
-      padding: 20px;
-      text-align: center;
-      color: #888;
-      font-size: 14px;
-    }
-  </style>
 </head>
 <body>
 
-  <header>
-    <div class="logo">
-      <img src="image/CyberThulir Logo.png" alt="CyberThulir Logo">
-    </div>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Learn</a>
-      <a href="#">Games</a>
-      <a href="#">R&D</a>
-      <a href="#">About</a>
-    </nav>
-  </header>
+    <video autoplay muted loop class="bg-video">
+        <source src="background.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 
-  <section class="hero">
-    <h1>Welcome to CyberThulir</h1>
-    <p>A gamified cybersecurity platform where curiosity blooms into knowledge. Learn, play, and research all in one secure environment.</p>
-    <button>Start Learning</button>
-  </section>
+  <!-- Navigation Bar -->
+  <nav class="navbar">
+    <div class="logo-img"><img src="image/CyberThulir Logo.png" alt="logo" width="60" height="60"></div>
+    <!-- <div class="logo">CYBER THULIR</div> -->
+    <ul class="nav-links">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Features</a></li>
+      <li><a href="#">Challenges</a></li>
+      <li><a href="#">Leaderboard</a></li>
+      <li><a href="#">Login</a></li>
+    </ul>
+    <div class="menu-icon"><p><i class="fa-solid fa-bars"></i></p></div>
+    <div class="x-icon"><p><i class="fa-solid fa-xmark"></i></p></div>
+    <ul class="mobile-navbar">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Challenges</a></li>
+        <li><a href="#">Leaderboard</a></li>
+        <li><a href="#">Login</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero Section -->
+<!-- Hero Section -->
+<section class="hero">
+  <div class="content">
+    <h1><span class="typewriter-text">Level Up Your Cyber Skills</span></h1>
+    <p>Gamified Learning Meets Real-World Cybersecurity Challenges.</p>
+    <h3>Join an immersive platform where you hack, learn, and research through real-world simulations and missions</h3>
+   
+    <a href="#" class="cta-button">Start Now</a>
+  </div>
+</section>
+
 
 
 </body>
